jaeb-macros/tests/compile_fail/handler_base_ms_without_strategy.stderr
error: `retry_base_ms` and `retry_max_ms` require `retry_strategy`; add `retry_strategy = "exponential"` (or `"exponential_jitter"` / `"fixed")
 --> tests/compile_fail/handler_base_ms_without_strategy.rs:9:1
  |
9 | async fn on_event(event: &MyEvent) -> HandlerResult {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `HandlerResult`
 --> tests/compile_fail/handler_base_ms_without_strategy.rs:3:12
  |
3 | use jaeb::{HandlerResult, handler};
  |            ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
